--- a/app/src/main/res/layout/content_semestre.xml
+++ b/app/src/main/res/layout/content_semestre.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.marcusberger.calculamediaunipnovo.ListaMateriaActivity"
-    tools:showIn="@layout/activity_lista_materia">
+    tools:context=".ListaSemestreActivity"
+    tools:showIn="@layout/activity_semestre">
 
     <ListView
-        android:id="@+id/lista_materia"
+        android:id="@+id/lista_semestre"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
