--- a/app/src/main/res/menu/menu_initial.xml
+++ b/app/src/main/res/menu/menu_initial.xml
@@ -1,10 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.marcusberger.calculamediaunipnovo.InitialActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_initial"
+        android:title="O desenvolvedor"/>
+
+    <item
+        android:id="@+id/menu_contatos"
+        android:title="Contatos"/>
+
+
 </menu>
